force-app/main/default/objects/Vendor_Service__c/Vendor_Service__c.object-meta.xml
<CustomObject>
    <label>Vendor Service</label>
    <nameField>
        <label>Vendor Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>