force-app/main/default/objects/Vendor_Service__c/fields/AV_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>AV_Deliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vendor can deliver rented equipment for use at client stakeholder location</description>
    <inlineHelpText>Vendor can deliver rented equipment for use at client stakeholder location</inlineHelpText>
    <label>AV Deliverable</label>
    <type>Checkbox</type>
</CustomField>