force-app/main/default/objects/Vendor_Service__c/fields/AV_Description__c.field-meta.xml
<CustomField>
    <fullName>AV_Description__c</fullName>
    <description>Describe the type of services that vendor provides</description>
    <label>AV Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>