force-app/main/default/objects/Vendor_Service__c/fields/AV_Other_Services__c.field-meta.xml
<CustomField>
    <fullName>AV_Other_Services__c</fullName>
    <label>AV Other Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>