force-app/main/default/objects/Vendor_Service__c/fields/AV_Price__c.field-meta.xml
<CustomField>
    <fullName>AV_Price__c</fullName>
    <description>Rental fee for use of equipment</description>
    <label>AV Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>