force-app/main/default/objects/Vendor_Service__c/fields/Catering_Delivarable__c.field-meta.xml
<CustomField>
    <fullName>Catering_Delivarable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does Catering Vendor provide delivery Services</description>
    <label>Catering Delivarable</label>
    <type>Checkbox</type>
</CustomField>