force-app/main/default/objects/Vendor_Service__c/fields/Catering_Menu__c.field-meta.xml
<CustomField>
    <fullName>Catering_Menu__c</fullName>
    <description>Placeholder for related List of Menu&apos;s associated to the Vendor</description>
    <label>Catering Menu</label>
    <length>25</length>
    <type>Text</type>
</CustomField>