force-app/main/default/objects/Vendor_Service__c/fields/FB_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>FB_Deliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does Vendor provide delivery services for Menu items</description>
    <inlineHelpText>Does Vendor provide delivery services for Menu items</inlineHelpText>
    <label>FB Deliverable</label>
    <type>Checkbox</type>
</CustomField>