force-app/main/default/objects/Vendor_Service__c/fields/FB_Menu__c.field-meta.xml
<CustomField>
    <fullName>FB_Menu__c</fullName>
    <description>Placeholder for Lookup to different menu options</description>
    <label>FB Menu</label>
    <length>100</length>
    <type>Text</type>
</CustomField>