force-app/main/default/objects/Vendor_Service__c/fields/FB_Set_Menu_Available_Flag__c.field-meta.xml
<CustomField>
    <fullName>FB_Set_Menu_Available_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will vendor created a customized menu for events</description>
    <inlineHelpText>Will vendor create a customized menu for events</inlineHelpText>
    <label>FB Set Menu Available Flag</label>
    <type>Checkbox</type>
</CustomField>