force-app/main/default/objects/Vendor_Service__c/fields/Parking_Onsite_Flag__c.field-meta.xml
<CustomField>
    <fullName>Parking_Onsite_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Free parking on onsite</description>
    <label>Parking Onsite Flag</label>
    <type>Checkbox</type>
</CustomField>