force-app/main/default/objects/Vendor_Service__c/fields/Parking_Price__c.field-meta.xml
<CustomField>
    <fullName>Parking_Price__c</fullName>
    <label>Parking Price Per Hour</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>