force-app/main/default/objects/Vendor_Service__c/fields/Parking_Valet_Available_Flag__c.field-meta.xml
<CustomField>
    <fullName>Parking_Valet_Available_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does vendor location provide valet parking</description>
    <label>Parking Valet Available Flag</label>
    <type>Checkbox</type>
</CustomField>