force-app/main/default/objects/Vendor_Service__c/fields/Room_Accessibilty__c.field-meta.xml
<CustomField>
    <fullName>Room_Accessibilty__c</fullName>
    <description>How rooms is accessible. Privacy. Windowless. TBD</description>
    <label>Room Accessibilty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>