force-app/main/default/objects/Vendor_Service__c/fields/Room_ADA_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Room_ADA_Compliant__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Room ADA Compliant</label>
    <type>Checkbox</type>
</CustomField>