force-app/main/default/objects/Vendor_Service__c/fields/Room_Audio_Visual_Capability__c.field-meta.xml
<CustomField>
    <fullName>Room_Audio_Visual_Capability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does Room have built in AV services</description>
    <label>Room Audio Visual Capability</label>
    <type>Checkbox</type>
</CustomField>