force-app/main/default/objects/Vendor_Service__c/fields/Room_Discount__c.field-meta.xml
<CustomField>
    <fullName>Room_Discount__c</fullName>
    <label>Room Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>