force-app/main/default/objects/Vendor_Service__c/fields/Room_Minimum_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Room_Minimum_Guarantee__c</fullName>
    <label>Room Minimum Guarantee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>