force-app/main/default/objects/Vendor_Service__c/fields/Room_Price__c.field-meta.xml
<CustomField>
    <fullName>Room_Price__c</fullName>
    <label>Room Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>