force-app/main/default/objects/Vendor_Service__c/fields/Room_Setups__c.field-meta.xml
<CustomField>
    <fullName>Room_Setups__c</fullName>
    <description>Need to determine if a picklist or just a Text area since each location might name the set up a little different</description>
    <label>Room Setups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Chairs Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>