force-app/main/default/objects/Vendor_Service__c/fields/TC_Description__c.field-meta.xml
<CustomField>
    <fullName>TC_Description__c</fullName>
    <description>More details TBD</description>
    <label>TC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>