force-app/main/default/objects/Vendor_Service__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Type_Picklist</valueSetName>
    </valueSet>
</CustomField>